force-app/main/default/objects/HelpRelationship__c/HelpRelationship__c.object-meta.xml
<CustomObject>
    <description>A join object relating a referring Help Topic to a related Help Topic</description>
    <label>Help Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Help Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>