force-app/main/default/objects/HelpRelationship__c/fields/ReferringTopic__c.field-meta.xml
<CustomField>
    <fullName>ReferringTopic__c</fullName>
    <inlineHelpText>The Help Topic Referring to this Related Topic</inlineHelpText>
    <label>Referring Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipName>TopicRelationshipsReferring</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>