force-app/main/default/objects/HelpRelationship__c/fields/RelatedHelpTopic__c.field-meta.xml
<CustomField>
    <fullName>RelatedHelpTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Help Topic Related to this Referring Help Topic</inlineHelpText>
    <label>Related Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipName>TopicRelationshipsRelated</relationshipName>
    <type>Lookup</type>
</CustomField>