force-app/main/default/objects/HelpRelationship__c/fields/SemanticTag__c.field-meta.xml
<CustomField>
    <fullName>SemanticTag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the type of relationship that exists between the related Topics</description>
    <inlineHelpText>Defines the type of relationship that exists between the related Topics</inlineHelpText>
    <label>Semantic Tag</label>
    <referenceTo>SemanticTag__c</referenceTo>
    <relationshipLabel>Help Relationships</relationshipLabel>
    <relationshipName>HelpRelationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>