force-app/main/default/objects/HelpRelationship__c/fields/SemanticTagIsBlank__c.field-meta.xml
<CustomField>
    <fullName>SemanticTagIsBlank__c</fullName>
    <description>Required to facilitate querying for blank (pre-semantics) relationship types</description>
    <formula>ISBLANK(SemanticTag__c)</formula>
    <inlineHelpText>Required to facilitate querying for blank (pre-semantics) relationship types</inlineHelpText>
    <label>Semantic Tag Is Blank</label>
    <type>Checkbox</type>
</CustomField>